updated jwt check
