# backend/customer/openapi.yaml
@@ -30,6 +30,24 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/Status'
+    /customer/Logout:
+        get:
+            tags:
+                - Customer
+            operationId: Customer_Logout
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/LogoutResp'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
     /customer/get-verify-code/{PhoneNum}:
         get:
             tags:
@@ -109,6 +127,9 @@ components:
                 tokenLift:
                     type: string
                     description: token有效期
+        LogoutResp:
+            type: object
+            properties: {}
         Status:
             type: object
             properties:
